# kg2lx

./: .dockerignore  .gitmodules  Dockerfile  README.md
.agents/skills/kugo-music-api/: SKILL.md
.agents/skills/kugo-music-api/references/: quick-reference.md
.agents/skills/lx-music-source/: SKILL.md
.agents/skills/lx-music-source/evals/: evals.json
.agents/skills/lx-music-source/references/: contract.md  patterns.md
docs/images/: demo.avif
server/: Cargo.toml  README.md
server/src/: app_state.rs  config.rs  domain.rs  error.rs  main.rs  repos.rs  routes.rs  services.rs
server/src/domain/: account.rs  cookie_store.rs  login_session.rs  provider.rs  runtime_log.rs  source.rs
server/src/repos/: account.rs  fs.rs  login_session.rs  runtime_log.rs  source.rs
server/src/repos/fs/: account.rs  login_session.rs  runtime_log.rs  source.rs
server/src/routes/: admin.rs  health.rs  runtime.rs  script.rs  static_fs.rs
server/src/services/: kugou_lite_client.rs  login.rs  runtime.rs  script.rs  source.rs
web/: README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/src/lib/api/: admin.ts  errors.ts  http.ts  types.ts
web/src/lib/components/source-logs/: LogsPanel.svelte
web/src/lib/components/ui/: badge.svelte  button.svelte  card-content.svelte  card-header.svelte  (+3 more)
web/src/lib/state/: admin-session.svelte.ts
web/src/lib/utils/: browser-storage.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/bind/: +page.svelte
web/src/routes/connect/: +page.svelte
web/src/routes/sources/: +page.svelte
(+4 files in other folders)
