[package]
name = "kg2lx-server"
version = "0.1.1"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
chrono = "0.4.44"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4"] }
